<resources>
    <string name="app_name">Church</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_materials">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="no_preaching_found">No audios found!</string>
    <string name="no_videos_found">No videos found!</string>
    <string name="no_materials_available_yet">No materials available yet!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_type">com.idea.church</string>
    <string name="bad_news">Bad News</string>
    <string name="you_are_currently_online_line">You are currently online line</string>
    <string name="do_you_can_view_items_in_your_downloads">You can view items in your download lists</string>
    <string name="good_news">Good News:</string>
    <string name="you_are_currently_offline_line">It seems you are offline</string>
    <string name="feed_back">Feed Back</string>
    <string name="go_to_downloads">Go to Downloads</string>
    <string name="no_devotion">Unable to fetch devotion</string>
    <string name="daily_scriptures">Daily Scriptures</string>
    <string name="register">Don\'t have an account? Register</string>
    <string name="no_leaders_found">No leaders found</string>
    <string name="login_welcome">Welcome to Victory Assemblies of God.</string>
    <string name="starting_details">After downloading the application, you have to register using your details and
                Church ID obtainable from your pastor. You\'d then have the privilege to download
                Audios, PDFs and Videos uploaded by your pastor; view notifications, receive push notifications and view leaders of your church and their contact.\n\n
                Downloaded items are readily available in your download list, which you can use if when offline.
                \n\n
                In case of any difficulty, just send us a feedback.
    </string>
</resources>
