<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".fragments.OfflineFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/bad_news"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/you_are_currently_offline_line"
            android:textColor="@android:color/darker_gray"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/good_news"
            android:textSize="15sp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/do_you_can_view_items_in_your_downloads"
            android:textColor="@android:color/darker_gray">

        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/homeBtn"
        android:layout_below="@id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_downloads"/>
</RelativeLayout>